--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 .me-section {
     background: rgb(46,46,46);
     background: linear-gradient(180deg, rgba(46,46,46,1) 35%, rgba(51,51,51,1) 100%);
-    height: 90vh;
+    height: 90dvh;
 }
 
 .intro {
@@ -97,7 +97,7 @@
 .stack-section {
     background: rgb(241,241,241);
     /*background: linear-gradient(0deg, rgba(241,241,241,1) 80%, rgba(51,51,51,1) 100%);*/
-    height: 80vh;
+    height: 80dvh;
 }
 .stack {
     height: 35%;
@@ -131,7 +131,7 @@
     }
 
     .stack-section {
-        height: 90vh;
+        height: 90dvh;
     }
     .stack {
         padding-top: 60px;
