Changes Home Page Width

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,6 +6,7 @@
 
 .intro {
     height: 60%;
+    width: 90% !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -101,6 +102,7 @@
 }
 .stack {
     height: 35%;
+    width: 90% !important;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -135,7 +137,6 @@
     }
     .stack {
         padding-top: 60px;
-        width: 80%;
         height: 30%;
     }
 }
