--- a/src/app/projects/project-card/project-card.component.css
+++ b/src/app/projects/project-card/project-card.component.css
@@ -1,10 +1,14 @@
+.card {
+    width: 90%;
+}
+
 .card .inverse-card-image {
     flex-direction: row-reverse;
 }
 
 .card .card-content {
     width: 100%;
-    padding: 40px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
