--- a/src/app/header/header-popup/login/login.component.html
+++ b/src/app/header/header-popup/login/login.component.html
@@ -1,96 +1,98 @@
 <app-popup
-    [state]="state"
-    (stateChange)="onStateChange($event)"
-    [ignoreClickOutside]="ignoreClickOutside"
->
-    <div
-        class="container m-0 overflow-hidden"
-        [@resizeContainerForErrorMessage]="hideErrorMessage()"
+  [state]="state"
+  (stateChange)="onStateChange($event)"
+  [ignoreClickOutside]="ignoreClickOutside"
+  >
+  <div
+    class="container m-0 overflow-hidden"
+    [@resizeContainerForErrorMessage]="hideErrorMessage()"
     >
-        <app-error-box
-            [errorMessage]="errorMessage"
-            [@showErrorMessage]="showErrorMessage()"
-        >
-        </app-error-box>
+    <app-error-box
+      [errorMessage]="errorMessage"
+      [@showErrorMessage]="showErrorMessage()"
+      >
+    </app-error-box>
 
-        <div
-            class="container authentication-container"
-            [@hideAuthContainer]="hideErrorMessage()"
-            (@hideAuthContainer.done)="hideAuthContainer($event)"
-        >
-            <div class="row">
-                <div class="col-lg-6 authentication-body">
-                    <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
-                        <div class="input-div">
-                            <fa-icon class="input-div-icon" [icon]="_userIcon">
-                            </fa-icon>
-                            <input
-                                type="text"
-                                id="username"
-                                formControlName="username"
-                                class="form-control"
-                                placeholder="Username"
-                            />
-                        </div>
-                        <div class="input-div">
-                            <fa-icon
-                                class="input-div-icon"
-                                [icon]="_passwordIcon"
-                            >
-                            </fa-icon>
-                            <input
-                                type="password"
-                                id="password"
-                                formControlName="password"
-                                class="form-control"
-                                placeholder="Password"
-                            />
-                        </div>
-                        <button
-                            class="btn"
-                            [disabled]="loginForm.invalid"
-                            type="submit"
-                        >
-                            Login
-                        </button>
-                    </form>
-                </div>
-                <div class="separator-line">
-                    <div class="line"></div>
-                </div>
-                <div class="col-lg-6 authentication-body">
-                    <button
-                        mat-button
-                        class="oauth-button d-flex justify-content-center align-items-center"
-                        [disabled]="isCookieBlocked"
-                        (click)="onGoogleLogin()"
-                    >
-                        <mat-icon
-                            *ngIf="!isCookieBlocked"
-                            style="width: 50px; height: 30px"
-                            svgIcon="google-logo"
-                        ></mat-icon>
-                        <mat-icon
-                            *ngIf="isCookieBlocked"
-                            style="width: 50px; height: 30px"
-                            svgIcon="google-disabled-logo"
-                        ></mat-icon>
-                        Login With Google
-                    </button>
-                    <button
-                        mat-button
-                        class="oauth-button d-flex justify-content-center align-items-center"
-                        [disabled]="isCookieBlocked"
-                        (click)="onGithubLogin()"
-                    >
-                        <mat-icon
-                            style="width: 50px; height: 30px"
-                            svgIcon="github-logo"
-                        ></mat-icon>
-                        Login With Github
-                    </button>
-                </div>
+    <div
+      class="container authentication-container"
+      [@hideAuthContainer]="hideErrorMessage()"
+      (@hideAuthContainer.done)="hideAuthContainer($event)"
+      >
+      <div class="row">
+        <div class="col-lg-6 authentication-body">
+          <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+            <div class="input-div">
+              <fa-icon class="input-div-icon" [icon]="_userIcon">
+              </fa-icon>
+              <input
+                type="text"
+                id="username"
+                formControlName="username"
+                class="form-control"
+                placeholder="Username"
+                />
             </div>
+            <div class="input-div">
+              <fa-icon
+                class="input-div-icon"
+                [icon]="_passwordIcon"
+                >
+              </fa-icon>
+              <input
+                type="password"
+                id="password"
+                formControlName="password"
+                class="form-control"
+                placeholder="Password"
+                />
+            </div>
+            <button
+              class="btn"
+              [disabled]="loginForm.invalid"
+              type="submit"
+              >
+              Login
+            </button>
+          </form>
         </div>
+        <div class="separator-line">
+          <div class="line"></div>
+        </div>
+        <div class="col-lg-6 authentication-body">
+          <button
+            mat-button
+            class="oauth-button d-flex justify-content-center align-items-center"
+            [disabled]="isCookieBlocked"
+            (click)="onGoogleLogin()"
+            >
+            @if (!isCookieBlocked) {
+              <mat-icon
+                style="width: 50px; height: 30px"
+                svgIcon="google-logo"
+              ></mat-icon>
+            }
+            @if (isCookieBlocked) {
+              <mat-icon
+                style="width: 50px; height: 30px"
+                svgIcon="google-disabled-logo"
+              ></mat-icon>
+            }
+            Login With Google
+          </button>
+          <button
+            mat-button
+            class="oauth-button d-flex justify-content-center align-items-center"
+            [disabled]="isCookieBlocked"
+            (click)="onGithubLogin()"
+            >
+            <mat-icon
+              style="width: 50px; height: 30px"
+              svgIcon="github-logo"
+            ></mat-icon>
+            Login With Github
+          </button>
+        </div>
+      </div>
     </div>
+  </div>
 </app-popup>
