--- a/src/app/header/header-slider/user-slider/user-slider.component.html
+++ b/src/app/header/header-slider/user-slider/user-slider.component.html
@@ -1,11 +1,10 @@
 <div class="user-container">
-    <div class="user-options">
-        <ul>
-            <li
-                *ngFor="
-                    let options of user ? userOptions : userlessOptions;
-                    let i = index
-                "
+  <div class="user-options">
+    <ul>
+      @for (
+        options of user ? userOptions : userlessOptions; track
+        options; let i = $index) {
+        <li
                 [@animateSliderItem]="{
                     value: itemStatus,
                     params: {
@@ -13,11 +12,12 @@
                         fadeOutTime: 0.6 - i / 10
                     }
                 }"
-            >
-                <a (click)="options.onClick()">
-                    {{ options.name }}
-                </a>
-            </li>
-        </ul>
-    </div>
+        >
+        <a (click)="options.onClick()">
+          {{ options.name }}
+        </a>
+      </li>
+    }
+  </ul>
+</div>
 </div>
